--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-toastify": "^3.3.0",
+    "react-toastr": "^3.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
